Added a 2d level that can be rendered (currently as colors) Added pixelperfect render upscale, so we can have pixelart graphics in fullscreen without artifacts

--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -42,6 +42,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GameCore.cs" />
+    <Compile Include="Gameplay\Level.cs" />
+    <Compile Include="Gameplay\LevelTile.cs" />
+    <Compile Include="Gameplay\TileType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
