--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -44,6 +44,8 @@
     <Compile Include="GameCore.cs" />
     <Compile Include="Gameplay\Level.cs" />
     <Compile Include="Gameplay\LevelTile.cs" />
+    <Compile Include="Gameplay\Player.cs" />
+    <Compile Include="Gameplay\PlayerController.cs" />
     <Compile Include="Gameplay\TileType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
