--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -44,7 +44,9 @@
     <Compile Include="GameCore.cs" />
     <Compile Include="Gameplay\Level.cs" />
     <Compile Include="Gameplay\LevelTile.cs" />
+    <Compile Include="Gameplay\Orientation.cs" />
     <Compile Include="Gameplay\Player.cs" />
+    <Compile Include="Gameplay\PlayerAction.cs" />
     <Compile Include="Gameplay\PlayerController.cs" />
     <Compile Include="Gameplay\TileType.cs" />
     <Compile Include="Program.cs" />
