Added some rendering classes  -> Sprite is the core for rendering, it is loaded from a json file that lies next to its texture and contains meta information about how to interpret the texture, including named frames and animations  -> SpriteInstance can be actually drawn to the screen. It can draw the sprite itself, a named frame or an animation(frame)  -> Image is the data container for image information, basically describing how the total image is setup  -> NamedFrame is a data container that connects a name (string) with a given frame of the sprite (int)  -> SpriteManager, is able to load sprites from files and stores them into the sprites-dictionary. Sprites can only be loaded once  -> Animator and Animation are not yet finished, but are more of a nice to have thingy (this is a polishing topic, for now single frame animations work just fine) Fixed the rotation of the robot Added a frame to the LevelTile that is used to randomize situations where multiple sprites for the same thing are available The player and level are now rendered correctly

--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -51,19 +51,43 @@
     <Compile Include="Gameplay\TileType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rendering\Animation.cs" />
+    <Compile Include="Rendering\Animator.cs" />
+    <Compile Include="Rendering\Image.cs" />
+    <Compile Include="Rendering\NamedFrame.cs" />
+    <Compile Include="Rendering\Sprite.cs" />
+    <Compile Include="Rendering\SpriteInstance.cs" />
+    <Compile Include="Rendering\SpriteManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\Levels\0.lvl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="Content\Sprites\MarsTiles.png" />
+    <Content Include="Content\Sprites\Robot.png" />
+    <Content Include="Content\Sprites\SignalTower.png" />
     <Content Include="Icon.ico" />
+    <None Include="Content\Sprites\Robot.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\Sprites\SignalTower.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\Sprites\MarsTiles.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
