Added Tower (with no real usage now) Reworked the way collision, walkability and moving is determined, by grouping multiple types together in lists Renamed "Moveable" to "Movable" Fixed Gamepad Axis checks Implemented Grab logic for turning

--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Gameplay\PlayerAction.cs" />
     <Compile Include="Gameplay\PlayerController.cs" />
     <Compile Include="Gameplay\TileType.cs" />
+    <Compile Include="Gameplay\Tower.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendering\Animation.cs" />
