--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Rendering\Sprite.cs" />
     <Compile Include="Rendering\SpriteInstance.cs" />
     <Compile Include="Rendering\SpriteManager.cs" />
+    <Compile Include="Scenes\CompletionScene.cs" />
     <Compile Include="Scenes\GameScene.cs" />
     <Compile Include="Scenes\LevelSelectScene.cs" />
     <Compile Include="Scenes\MainMenuScene.cs" />
@@ -70,7 +71,7 @@
     <Compile Include="Scenes\Scene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
     <Compile Include="Scenes\SplashScreen.cs" />
-    <Compile Include="Sounds\SoundEmmitter.cs" />
+    <Compile Include="Sounds\SoundEmitter.cs" />
     <Compile Include="Sounds\SoundManager.cs" />
     <Compile Include="UI\ActionUI.cs" />
     <Compile Include="UI\Button.cs" />
