--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -77,6 +77,7 @@
     <Compile Include="UI\Button.cs" />
     <Compile Include="UI\LevelUI.cs" />
     <Compile Include="UI\PauseMenu.cs" />
+    <Compile Include="UI\TextBlock.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
