Added a configuration for the screensize/fullscreen settings  -> This is part of the release 1.0 already, I just forgot to commit

--- a/GmtkJam2020/GmtkJam2020.csproj
+++ b/GmtkJam2020/GmtkJam2020.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Scenes\Scene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
     <Compile Include="Scenes\SplashScreen.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="Sounds\SoundEmitter.cs" />
     <Compile Include="Sounds\SoundManager.cs" />
     <Compile Include="UI\ActionUI.cs" />
